# Agent-Builder-Evals

./: .env.example  .gitignore  Makefile  README.md  agentevals.toml  index.html  pyproject.toml
.github/workflows/: agent-evals.yml
site/: README.md  index.html  styles.css
src/agent_evals/: __init__.py  cli.py  config.py  gate.py  git.py  lfd.py  models.py  plugins.py  pricing.py  project_config.py  results_io.py  runner.py  version.py
src/agent_evals/adapters/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py
src/agent_evals/scorers/: __init__.py  aggregate.py  base.py  citation_quality.py  coding.py  cost.py  failure.py  latency.py  task_completion.py  tool_accuracy.py
src/agent_evals/tasks/: loader.py
src/agent_evals/tasks/_fixtures/coding/: test_dedupe.py  test_moving_average.py  test_reverse_words.py  test_slugify.py
src/agent_evals/tasks/_fixtures/support/: store.json
src/agent_evals/tasks/definitions/coding/: coding_001.yaml  coding_002.yaml  coding_003.yaml  coding_004.yaml
src/agent_evals/tasks/definitions/company_research/: company_research_001.yaml  company_research_002.yaml  company_research_003.yaml  company_research_004.yaml
src/agent_evals/tasks/definitions/competitive_analysis/: competitive_analysis_001.yaml  competitive_analysis_002.yaml  (+2 more)
src/agent_evals/tools/: __init__.py  base.py  code_exec.py  fetch_url.py  search_backend.py  support_data.py  web_search.py
tests/: test_adapters.py  test_check_e2e.py  test_gate.py  test_lfd.py  test_models.py  test_scorers.py  test_smoke_e2e.py  test_tools.py
(+13 files in other folders)
