[project]
name = "agent-builder-evals"
version = "0.1.0"
description = "CLI benchmark suite for evaluating AI agents across providers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.79.0",
  "openai-agents>=0.6.0",
  "pydantic>=2.12.0",
  "python-dotenv>=1.2.0",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
]

[project.scripts]
agent-evals = "agent_evals.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
